--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@types/react": "^18.2.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "typescript": "^5.1.6"
+    "tslib": "^2.6.0",
+    "typescript": "^5.1.6",
+    "typescript-plugin-css-modules": "^5.0.1"
   },
   "dependencies": {
     "lodash": "^4.17.21"
