--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ascendtis/react-a-form",
-  "version": "0.0.12",
+  "version": "0.0.13",
   "description": "Ascendtis own's Instant validation AForm component.",
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
@@ -32,6 +32,7 @@
     "typescript-plugin-css-modules": "^5.0.1"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "react-select": "^5.7.4"
   }
 }
