--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ascendtis/react-a-form",
-  "version": "0.0.30",
+  "version": "0.0.31",
   "description": "Ascendtis own's Instant validation AForm component.",
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
@@ -20,7 +20,7 @@
   "license": "ISC",
   "private": false,
   "peerDependencies": {
-    "react": ">=16"
+    "react": ">=16 <=19"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.195",
