--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ascendtis/react-a-form",
-  "version": "0.0.33",
+  "version": "0.0.34",
   "description": "Ascendtis own's Instant validation AForm component.",
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
@@ -14,7 +14,8 @@
     "react",
     "typescript",
     "form",
-    "validation"
+    "validation",
+    "input group"
   ],
   "author": "Ascendtis IT Solutions LLP",
   "license": "ISC",
